--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,5 +1,6 @@
 @import "_fonts.scss";
 @import "_variables.scss";
+@import "_animations.scss";
 
 
 
@@ -8,3 +9,48 @@
     color:$primary-color;
 }
 
+img {
+    width:100%;
+    height: auto;
+}
+
+h2, h3, h4 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900 !important;
+}
+
+h2{
+    font-size:2.5rem;
+}
+
+button{
+    border:none;
+    font-weight: 600;
+    border-radius: 0.2rem;
+    padding:0.5rem 1.5rem;
+}
+
+.row {
+    margin-right:0 !important;
+}
+
+/* Small devices (landscape phones, 576px and up) sm */
+@media (min-width: 576px) {  
+ 
+}
+ 
+/* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint md*/
+@media (min-width: 768px) {  
+ 
+}
+ 
+/* Large devices (desktops, 992px and up) lg */
+@media (min-width: 992px) { 
+ 
+}
+ 
+/* Extra large devices (large desktops, 1200px and up) xl */
+@media (min-width: 1200px) {  
+    
+}
+ 
