--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -32,6 +32,7 @@ button{
 
 .row {
     margin-right:0 !important;
+    margin-left:0 !important;
 }
 
 /* Small devices (landscape phones, 576px and up) sm */
