--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,12 @@
+
+//colors
 $primary-color:#2D9CDB;
 $secondary-color:#000000;
 $tertiary-color:#FFFFFF;
 $footer-color:#F0F0F0;
+
+//responsive sizes
+$sm:576px;
+$md:768px;
+$lg:992px;
+$xl:1200px;
