Updated portfolio style

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,8 +1,10 @@
 
 //colors
-$primary-color:#2D9CDB;
+$primary-color:#FFFFFF;
 $secondary-color:#000000;
-$tertiary-color:#FFFFFF;
+$tertiary-color:#2D9CDB;
+$quaternary-color:#b8e5ff;
+$text-color:#6C6C6C;
 $footer-color:#F0F0F0;
 
 //responsive sizes
