--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -9,6 +9,10 @@
     color:$primary-color;
 }
 
+.text-color {
+color:$text-color;
+}
+
 img {
     width:100%;
     height: auto;
@@ -24,7 +28,7 @@ h2, h3, h4 {
 }
 
 h2{
-    font-size:clamp(1.8rem, 2vw, 3rem);
+    font-size:clamp(1.8rem, 2.5vw, 3rem);
 }
 
 h1{
@@ -32,6 +36,7 @@ font-size: clamp(2rem, 2.5vw , 3.5rem);;
 font-weight: 400;
 text-align: center;
 }
+
 
 button{
     border:none;
