--- a/src/assets/scss/_animations.scss
+++ b/src/assets/scss/_animations.scss
@@ -39,3 +39,9 @@
       transform: translateX(-16px);
     }
   }
+
+  @keyframes cursorBlink {
+    49% { background-color: #fff; }
+    50% { background-color: transparent; }
+    99% { background-color: transparent; }
+  }
