--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -37,7 +37,7 @@ h2{
 }
 
 h1{
-font-size: clamp(2rem, 2.5vw , 3.5rem);;
+font-size: clamp(2rem, 2.5vw , 3.5rem);
 font-weight: 400;
 text-align: center;
 }
